Last tipo ultima

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
-    --cor-fundo: #01080E ;
-    --cor-principal: #0B0D20 ;
-    --cor-secundaria: #212333; 
-    --cor-destaque: #2BDEFD;
+    --cor-fundo: #201400 ;
+    --cor-principal: #20130b ;
+    --cor-secundaria: #332b21; 
+    --cor-destaque: #fd9b2b;
     --cor-texto: #D7F9FF;
 
 }
